ParDouble.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParDouble.y
-----------------------------------------------------------------------------

state 16 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pE -> E                                     (0)
	Double -> L_doubl                                  (1)
	Integer -> L_integ                                 (2)
	E -> E1                                            (3)
	E -> E2                                            (4)
	E1 -> E2 '+' ListE2                                (5)
	ListE2 -> E2                                       (6)
	ListE2 -> E2 '+' ListE2                            (7)
	E2 -> '(' E2 ')'                                   (8)
	E2 -> E3                                           (9)
	E3 -> I '*' E4                                     (10)
	E3 -> E4 '*' I                                     (11)
	E3 -> E4                                           (12)
	E4 -> '(' E1 ')'                                   (13)
	E4 -> '(' E4 ')'                                   (14)
	E4 -> E5                                           (15)
	E5 -> Double                                       (16)
	I -> Integer                                       (17)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pE       rule  0
	Double          rule  1
	Integer         rule  2
	E               rules 3, 4
	E1              rule  5
	ListE2          rules 6, 7
	E2              rules 8, 9
	E3              rules 10, 11, 12
	E4              rules 13, 14, 15
	E5              rule  16
	I               rule  17

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pE -> . E                                    (rule 0)

	'('            shift, and enter state 12
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 13

	Double         goto state 3
	Integer        goto state 4
	E              goto state 5
	E1             goto state 6
	E2             goto state 7
	E3             goto state 8
	E4             goto state 9
	E5             goto state 10
	I              goto state 11

State 1

	Double -> . L_doubl                                 (rule 1)

	L_doubl        shift, and enter state 2


State 2

	Double -> L_doubl .                                 (rule 1)

	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	E5 -> Double .                                      (rule 16)

	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	%eof           reduce using rule 16


State 4

	I -> Integer .                                      (rule 17)

	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	%eof           reduce using rule 17


State 5

	%start_pE -> E .                                    (rule 0)

	%eof           accept


State 6

	E -> E1 .                                           (rule 3)

	%eof           reduce using rule 3


State 7

	E -> E2 .                                           (rule 4)
	E1 -> E2 . '+' ListE2                               (rule 5)

	'+'            shift, and enter state 19
	%eof           reduce using rule 4


State 8

	E2 -> E3 .                                          (rule 9)

	')'            reduce using rule 9
	'+'            reduce using rule 9
	%eof           reduce using rule 9


State 9

	E3 -> E4 . '*' I                                    (rule 11)
	E3 -> E4 .                                          (rule 12)

	')'            reduce using rule 12
	'*'            shift, and enter state 18
	'+'            reduce using rule 12
	%eof           reduce using rule 12


State 10

	E4 -> E5 .                                          (rule 15)

	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	%eof           reduce using rule 15


State 11

	E3 -> I . '*' E4                                    (rule 10)

	'*'            shift, and enter state 17


State 12

	E2 -> '(' . E2 ')'                                  (rule 8)
	E4 -> '(' . E1 ')'                                  (rule 13)
	E4 -> '(' . E4 ')'                                  (rule 14)

	'('            shift, and enter state 12
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 13

	Double         goto state 3
	Integer        goto state 4
	E1             goto state 14
	E2             goto state 15
	E3             goto state 8
	E4             goto state 16
	E5             goto state 10
	I              goto state 11

State 13

	Integer -> L_integ .                                (rule 2)

	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	%eof           reduce using rule 2


State 14

	E4 -> '(' E1 . ')'                                  (rule 13)

	')'            shift, and enter state 27


State 15

	E1 -> E2 . '+' ListE2                               (rule 5)
	E2 -> '(' E2 . ')'                                  (rule 8)

	')'            shift, and enter state 26
	'+'            shift, and enter state 19


State 16

	E3 -> E4 . '*' I                                    (rule 11)
	E3 -> E4 .                                          (rule 12)
	E4 -> '(' E4 . ')'                                  (rule 14)

	')'            shift, and enter state 25
			(reduce using rule 12)

	'*'            shift, and enter state 18
	'+'            reduce using rule 12


State 17

	E3 -> I '*' . E4                                    (rule 10)

	'('            shift, and enter state 24
	L_doubl        shift, and enter state 2

	Double         goto state 3
	E4             goto state 23
	E5             goto state 10

State 18

	E3 -> E4 '*' . I                                    (rule 11)

	L_integ        shift, and enter state 13

	Integer        goto state 4
	I              goto state 22

State 19

	E1 -> E2 '+' . ListE2                               (rule 5)

	'('            shift, and enter state 12
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 13

	Double         goto state 3
	Integer        goto state 4
	ListE2         goto state 20
	E2             goto state 21
	E3             goto state 8
	E4             goto state 9
	E5             goto state 10
	I              goto state 11

State 20

	E1 -> E2 '+' ListE2 .                               (rule 5)

	')'            reduce using rule 5
	%eof           reduce using rule 5


State 21

	ListE2 -> E2 .                                      (rule 6)
	ListE2 -> E2 . '+' ListE2                           (rule 7)

	')'            reduce using rule 6
	'+'            shift, and enter state 29
	%eof           reduce using rule 6


State 22

	E3 -> E4 '*' I .                                    (rule 11)

	')'            reduce using rule 11
	'+'            reduce using rule 11
	%eof           reduce using rule 11


State 23

	E3 -> I '*' E4 .                                    (rule 10)

	')'            reduce using rule 10
	'+'            reduce using rule 10
	%eof           reduce using rule 10


State 24

	E4 -> '(' . E1 ')'                                  (rule 13)
	E4 -> '(' . E4 ')'                                  (rule 14)

	'('            shift, and enter state 12
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 13

	Double         goto state 3
	Integer        goto state 4
	E1             goto state 14
	E2             goto state 28
	E3             goto state 8
	E4             goto state 16
	E5             goto state 10
	I              goto state 11

State 25

	E4 -> '(' E4 ')' .                                  (rule 14)

	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	%eof           reduce using rule 14


State 26

	E2 -> '(' E2 ')' .                                  (rule 8)

	')'            reduce using rule 8
	'+'            reduce using rule 8
	%eof           reduce using rule 8


State 27

	E4 -> '(' E1 ')' .                                  (rule 13)

	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	%eof           reduce using rule 13


State 28

	E1 -> E2 . '+' ListE2                               (rule 5)

	'+'            shift, and enter state 19


State 29

	ListE2 -> E2 '+' . ListE2                           (rule 7)

	'('            shift, and enter state 12
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 13

	Double         goto state 3
	Integer        goto state 4
	ListE2         goto state 30
	E2             goto state 21
	E3             goto state 8
	E4             goto state 9
	E5             goto state 10
	I              goto state 11

State 30

	ListE2 -> E2 '+' ListE2 .                           (rule 7)

	')'            reduce using rule 7
	%eof           reduce using rule 7


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 18
Number of terminals: 6
Number of non-terminals: 11
Number of states: 31
